Problema 5 listo para subirse

--- a/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
+++ b/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
@@ -202,6 +202,24 @@
    ]
   },
   {
+   "source": [
+    "# Problema 5\n",
+    "\n",
+    "2520 es el número positivo más pequeño que se puede dividir por cada uno de los números del 1 al 10 sin ningún residuo.\n",
+    "\n",
+    "¿Cuál es el número positivo más pequeño que es divisible por todos los números del 1 al 20?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "according-plain",
    "metadata": {},
