--- a/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
+++ b/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
@@ -76,8 +76,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "4613732\n"
      ]
@@ -202,22 +202,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "limited-saturn",
+   "metadata": {},
    "source": [
     "# Problema 5\n",
     "\n",
     "2520 es el número positivo más pequeño que se puede dividir por cada uno de los números del 1 al 10 sin ningún residuo.\n",
     "\n",
     "¿Cuál es el número positivo más pequeño que es divisible por todos los números del 1 al 20?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "black-accordance",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "232792560\n"
+     ]
+    }
+   ],
+   "source": [
+    "bandera=0\n",
+    "numero=0\n",
+    "while bandera==0:\n",
+    "    numero=numero+19\n",
+    "    contador=0\n",
+    "    for j in range(1,21):\n",
+    "        if numero%j==0:\n",
+    "            contador=contador+1\n",
+    "        else:\n",
+    "            break\n",
+    "    if contador>=20:\n",
+    "        bandera=1\n",
+    "    \n",
+    "print(numero)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -515,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1-final"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
