feat: Calificaciones Finales 2021-1 Gen41

--- a/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
+++ b/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "psychological-flexibility",
    "metadata": {},
    "source": [
     "<br><br><p style=\"text-align: center;\">\n",
@@ -23,7 +22,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "printable-chrome",
    "metadata": {},
    "source": [
     "# Problema 1\n",
@@ -35,8 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "promotional-hormone",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,13 +49,11 @@
     "for i in range(1000):\n",
     "    if i%5==0 or i%3==0:\n",
     "        suma+=i\n",
-    "        \n",
     "print(suma)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "experimental-terry",
    "metadata": {},
    "source": [
     "# Problema 2\n",
@@ -71,8 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "different-hypothesis",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +91,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smaller-singapore",
    "metadata": {},
    "source": [
     "# Problema 3\n",
@@ -108,8 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "human-scotland",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +152,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "black-locator",
    "metadata": {},
    "source": [
     "# Problema 4\n",
@@ -172,8 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "stylish-jurisdiction",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +193,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limited-saturn",
    "metadata": {},
    "source": [
     "# Problema 5\n",
@@ -215,8 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "black-accordance",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +234,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "according-plain",
    "metadata": {},
    "source": [
     "# Problema 6\n",
@@ -269,8 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "choice-nation",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +279,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "renewable-correspondence",
    "metadata": {},
    "source": [
     "# Problema 7\n",
@@ -305,8 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "cordless-operator",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +324,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "black-peace",
    "metadata": {},
    "source": [
     "# Problema 8\n",
@@ -373,8 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "international-christianity",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +390,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "textile-string",
    "metadata": {},
    "source": [
     "# Problema 9\n",
@@ -424,8 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "advisory-anger",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +440,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "patient-heather",
    "metadata": {},
    "source": [
     "# Problema 10\n",
@@ -473,16 +452,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "separated-police",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Suma de los números primos inferiores a 2000000:  142913828922\n",
-      "Tiempo de cálculo (hh:mm:ss.ms) 1:14:12.063506\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-021ac686c92b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mnumeros\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mif\u001b[0m  \u001b[0mx\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m13\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m17\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m19\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m             \u001b[0mnumeros\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0msuma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m77\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -518,7 +499,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "constant-reserve",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -540,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
