--- a/EntregasEuler/PrebeChidos_11/Ejercicio_4/problema4.ipynb
+++ b/EntregasEuler/PrebeChidos_11/Ejercicio_4/problema4.ipynb
@@ -1,30 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.1-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.1 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "acf6e65c095f0a177ad1ca8afd350e645503ed109c972d889afe3525c83f10a9"
-    }
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -32,10 +6,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "El palíndromo más grande hecho del producto de dos números de 3 dígitos es: 906609\nFormado por el producto de los números:\nPrimer número: 913\nSegundo número: 993\n"
+      "El palíndromo más grande hecho del producto de dos números de 3 dígitos es: 906609\n",
+      "Formado por el producto de los números:\n",
+      "Primer número: 913\n",
+      "Segundo número: 993\n"
      ]
     }
    ],
@@ -74,13 +51,27 @@
     "print(\"Primer número: {}\".format(numero1))\n",
     "print(\"Segundo número: {}\".format(numero2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
