--- a/Teoría/Avanzado/El lenguaje de programación Python - Avanzado.ipynb
+++ b/Teoría/Avanzado/El lenguaje de programación Python - Avanzado.ipynb
@@ -3691,7 +3691,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3705,7 +3705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
